Attempt at fixing the Browse tree toggle on mobile

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -242,7 +242,6 @@ ul.myTree li:focus {
 }
 
 .hideShowLeftPaneBtn {
-  cursor: pointer;
   text-align: center;
   padding: 2px;
   margin-bottom: 5px;
